--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <img src="./images/home-chat-7.png" alt="home-chat-7" />
                 </div>
             </div>
-            <p>* Data charges may apply. Contact your provider for details.</p>
+            <p class="note">* Data charges may apply. Contact your provider for details.</p>
         </div>
     </section>
     <section id="desc">
